logs/taschenmesser.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/taschenmesser'...
Compiling './lib/python3.5/site-packages/taschenmesser/fileutil.py'...
***   File "./lib/python3.5/site-packages/taschenmesser/fileutil.py", line 31
    print "Taschenmesser: hashlib or gzip missing"
                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/taschenmesser/gclosure.py'...
***   File "./lib/python3.5/site-packages/taschenmesser/gclosure.py", line 82
    print ' '.join(cmd)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/taschenmesser/pyegg.py'...
***   File "./lib/python3.5/site-packages/taschenmesser/pyegg.py", line 27
    print "Taschenmesser: Setuptools missing. Python Egg creation won't be available."
                                                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/taschenmesser/svg.py'...
***   File "./lib/python3.5/site-packages/taschenmesser/svg.py", line 24
    print "Taschenmesser: Inkscape executable not found - SVG to PNG conversion won't be available."
                                                                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/taschenmesser-0.1.11.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
